all checker errors resolved